# Minecraft-Clone

./: CMakeLists.txt  README.md
include/: Block.h  Camera.h  Chunk.h  FirstPersonController.h  FractalNoise.h  Model.h  Perlin.h  ReadFile.h  Shader.h  SpriteRenderer.h  Texture.h  TextureRegion.h  TextureStitching.h  WorkQueue.h  WorkQueue.tpp  World.h
include/Batch/: glm.h
include/GL/: glew.h
include/IMG/: lodepng.h
resources/: shader.frag  shader.vert
src/: Block.cpp  Chunk.cpp  FirstPersonController.cpp  FractalNoise.cpp  Model.cpp  Perlin.cpp  Shader.cpp  Shader.h  SpriteRenderer.cpp  Texture.cpp  Texture.h  TextureRegion.cpp  TextureStitching.cpp  World.cpp  main.cpp
src/Blocks/: AggregateBlockRegister.cpp  AggregateBlockRegister.h  Air.cpp  Air.h  Dirt.cpp  Dirt.h  Grass.cpp  Grass.h  Stone.cpp  Stone.h
